--- a/vignettes/dual_inlet.Rmd
+++ b/vignettes/dual_inlet.Rmd
@@ -59,7 +59,7 @@ iso_files %>%
 
 # Isotope ratios
 
-For dual inlet applications isotope ratios calculated using the recorded ion intensities are typically of primary interest. For this purpose, isoreader provides a dynamic ratio calculation function (`iso_calculate_ratios()`) that accepts any combination of masses, here demonstrated for several different ratios. In this context, another useful customization option of the plotting function is the option to adjust plot aesthetics such as color, shape, and paneling:
+For dual inlet applications isotope ratios calculated using the recorded ion intensities are typically of primary interest. For this purpose, isoprocessor provides a dynamic ratio calculation function (`iso_calculate_ratios()`) that accepts any combination of masses, here demonstrated for several different ratios. In this context, another useful customization option of the plotting function is the option to adjust plot aesthetics such as color, shape, and paneling:
 
 ```{r "ratios", fig.width = 8, fig.asp = 1}
 iso_files <-
@@ -78,9 +78,29 @@ iso_files %>%
   )
 ```
 
+# Deltas
+
+In addition, isoprocessor provides a dynamic raw delta calculation function (`iso_calculate_deltas()`) that calculates direct or bracketed sample-standard delta values as described in the function help. See code below for a few examples:
+
+```{r}
+iso_files <-
+  iso_files %>% 
+  # calculate 46/44, 45/44 and 32/28 (O2/N2) deltas
+  iso_calculate_deltas(deltas = c("d46/44", "d45/44", "d32/28"), bracket = TRUE)
+
+iso_files %>% 
+  iso_plot_dual_inlet_data(
+    # visualize deltas together with one of the ratios
+    data = c("45/44", "d45/44", "d46/44", "d32/28"),
+    # color by the file info stored in Identifier 1
+    color = `Identifier 1`
+  )
+```
+
+
 # Signal conversion
 
-Isoreader can convert between different signal units. This is particularly useful for comparing data files from different mass specs that record primary signals differentally. In dual inlet applications, this is typically less important than in continuous flow because data is usually visualized as ratios right away. However, occassionally it can be of interest to examine the primary ion currents. 
+Isoprocessor can convert between different signal units. This is particularly useful for comparing data files from different mass specs that record primary signals differentally. In dual inlet applications, this is typically less important than in continuous flow because data is usually visualized as ratios right away. However, occassionally it can be of interest to examine the primary ion currents. 
 
 ```{r "signal_conversion", fig.width = 10, fig.asp = 0.3}
 iso_files$dual_inlet_example.caf %>% 
@@ -95,7 +115,7 @@ iso_files$dual_inlet_example.caf %>%
 
 # Plot styling
 
-Since all isoreader plots are standard [ggplot](http://ggplot2.tidyverse.org/) objects, they can be modified with any ggplot commands. For example to add a horizontal line (using [dplyr](http://dplyr.tidyverse.org/) for the calculations) and modify the themes:
+Since all isoprocessor plots are standard [ggplot](http://ggplot2.tidyverse.org/) objects, they can be modified with any ggplot commands. For example to add a horizontal line (using [dplyr](http://dplyr.tidyverse.org/) for the calculations) and modify the themes:
 
 ```{r "plot styling", message=FALSE, fig.width = 8, fig.asp = 0.7}
 library(ggplot2)
